--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "aws-sdk": "^2.990.0",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "sequelize": "^4.44.3"
   },
